--- a/login.html
+++ b/login.html
@@ -10,18 +10,21 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Patua+One&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap');
     .patua {
-      font-family: 'Patua One', cursive;  
+      font-family: 'Oxygen', sans-serif;  
     }
   </style>
 </head>
 <body>
   <div class="m-auto flex flex-col h-screen">
+     <!-- Navbar Start -->
      <div class="nav py-3 bg-white flex justify-between items-center flex-wrap shadow-md">
        <div class="uppercase px-3 text-xl text-[#012b73] patua tracking-wide"><a href="/">Hostinger</a></div>
      </div>
+     <!-- Navbar End -->
     <main class="flex-1 overflow-auto">
+     <!-- Login Form Start -->
      <div class="flex justify-center md:p-5 md:pt-16 pt-5 items-center gap-5 overflow-auto">
       <div class="w-full md:min-w-[350px] max-w-[450px] px-3">
         <div class="px-3 py-3 rounded-xl">
@@ -34,10 +37,12 @@
          </form>
           <p class="pt-6 text-center text-sm font-medium text-[#555555] font-semibold">Or Login Using</p>
           <div class="text-center pt-3 flex gap-4 justify-center"><button><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/48px-Google_%22G%22_Logo.svg.png?20210618182606" class="h-10" alt="Google" /></button><button><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/51/Facebook_f_logo_%282019%29.svg/1200px-Facebook_f_logo_%282019%29.svg.png?20200820101156" class="h-10" alt="Facebook" /></button></div> 
-          <p class=" w-full text-center text-[#012B73] font-semibold text-medium text-md pt-20"><button class="py-2 px-5 border-2 border-[#013B73] rounded-full">Create Your Account</button></p>
+          <p class=" w-full text-center text-[#012B73] font-semibold text-medium text-md py-20"><button class="py-2 px-5 border-2 border-[#013B73] rounded-full">Create Your Account</button></p>
         </div>
       </div>
      </div>
+     <!-- Login Form End -->
+     <!-- Footer Start -->
      <div class="footer bg-sky-100 p-5">
       <img src="https://assets.hostinger.com/images/logo-homepage2020-f9c79137d7.svg" alt="icon" />
       <p class="text-sm text-[#012B73] pt-3">We are a web hosting company with a mission to help everyone who goes online succeed.
@@ -79,7 +84,9 @@
       <hr class="bg-blue-800"/>
       <p class="pt-2 text-sm text-[#012B73] font-small">© 2004-2022 hostinger.in - India’s #1 Web Hosting & Domains provider.</p>
      </div>
+     <!-- Footer End -->
     </main>
   </div>
+  <!-- The End :) -->
 </body>
 </html>
