--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   <div class="m-auto flex flex-col h-screen">
     <!-- Navigation Start -->
     <div class="nav py-3 bg-white flex justify-between items-center flex-wrap shadow-md">
-     <div class="uppercase px-3 text-xl text-[#012b73] patua tracking-wide"><a href='/'>Hostinger</a></div>
+     <div class="uppercase px-3 text-xl text-[#012b73] patua tracking-wide"><a href=' https://immnikhil.github.io/codefest/'>Hostinger</a></div>
      <div class="flex gap-4 px-3 items-center"><button onclick="flag()"><img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT1-Z7wF-w0lFB_xnJGUpIdw3lRzBRdY4BO6Q&usqp=CAU" class="h-6" alt="Flag" /></button><button onclick="handleToggle(0)" id="menu"><i class="bi bi-list text-3xl"></i></button></div>
      <div class="w-full mt-3 px-4 ba-1 font-semibold text-[#555555] overflow-auto item hidden">
        <div class="py-3 bb-1 flex justify-between flex-wrap item"><span>Hosting</span><span onclick="handleToggle(1)"><i class="bi bi-chevron-down"></i></span><div class="w-full mt-3 py-2 px-3 ba-1 text-blue-400 hidden"><p class="bb-1 pb-3 pt-1"><button>Web Hosting</button></p><p class="bb-1 py-3"><button>Cloud Hosting</button></p><p class="pt-3"><button>WordPress Hosting</button></p></div></div>
@@ -61,7 +61,7 @@
        <div class="py-3 bb-1 flex justify-between flex-wrap item"><span>Email</span><span onclick="handleToggle(3)"><i class="bi bi-chevron-down"></i></span><div class="w-full mt-3 py-2 px-3 ba-1 text-blue-400 hidden"><p class="bb-1 pb-3 pt-1"><button>Google Workspace Email Hosting</button></p><p class="pt-3"><button>Hostinger Email Hosting</button></p></div></div>
        <div class="py-3 bb-1 flex justify-between flex-wrap item"><span>Domain</span><span onclick="handleToggle(4)"><i class="bi bi-chevron-down"></i></span><div class="w-full mt-3 py-2 px-3 ba-1 text-blue-400 hidden"><p class="bb-1 pb-3 pt-1"><button>Domain Name Search</button></p><p class="bb-1 py-3"><button>WHOIS Lookup</button></p><p class="pt-3"><button>Domain Transfer</button></p></div></div>
        <div class="py-3 bb-1"><button class="w-full text-left" onclick="alert('My Cart is under Progress.')">My Cart</button></div>
-       <div class="flex justify-center w-full pt-3 px-8"><button class="w-full max-w-[500px] bg-[#012b73] text-white py-2 text-lg font-semibold rounded-full" onclick="window.location.href = 'https://immnikhil.github.io/codefest.github.io/login.html'">Log In <i class="bi bi-shield-lock text-xl"></i></button></div>
+       <div class="flex justify-center w-full pt-3 px-8"><button class="w-full max-w-[500px] bg-[#012b73] text-white py-2 text-lg font-semibold rounded-full" onclick="window.location.href = 'https://immnikhil.github.io/codefest/login.html'">Log In <i class="bi bi-shield-lock text-xl"></i></button></div>
      </div>
      <div class="mt-3 w-full bg-[#efeFeF] py-3 px-4 hidden flags">
       <div class="flex bg-white rounded-full bo-1"><input class="grow rounded-full px-5 outline-none" placeholder="Type Language Name..."/><button class="px-4 py-2 outline-none"><i class="bi bi-search text-xl text-blue-500"></i></button></div>
