--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
   <div class="m-auto flex flex-col h-screen">
      <!-- Navbar Start -->
      <div class="nav py-3 bg-white flex justify-between items-center flex-wrap shadow-md">
-       <div class="uppercase px-3 text-xl text-[#012b73] patua tracking-wide"><a href="/">Hostinger</a></div>
+       <div class="uppercase px-3 text-xl text-[#012b73] patua tracking-wide"><a href=" https://immnikhil.github.io/codefest/">Hostinger</a></div>
      </div>
      <!-- Navbar End -->
     <main class="flex-1 overflow-auto">
